; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_check_unsupp_fs.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_check_unsupp_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZFS_PROP_VERSION = common dso_local global i32 0, align 4
@ZPL_VERSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"%s (v%d) is not supported by this implementation of ZFS.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @check_unsupp_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_unsupp_fs(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @ZFS_PROP_VERSION, align 4
  %9 = call i64 @zfs_prop_get_int(i32* %7, i32 %8)
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* %5, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @ZPL_VERSION, align 4
  %15 = icmp sgt i32 %13, %14
  br i1 %15, label %16, label %25

16:                                               ; preds = %2
  %17 = call i8* @gettext(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %18 = load i32*, i32** %3, align 8
  %19 = call i8* @zfs_get_name(i32* %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @printf(i8* %17, i8* %19, i32 %20)
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %22, align 4
  br label %25

25:                                               ; preds = %16, %2
  %26 = load i32*, i32** %3, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @zfs_iter_filesystems(i32* %26, i32 (i32*, i8*)* @check_unsupp_fs, i8* %27)
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 @zfs_close(i32* %29)
  ret i32 0
}

declare dso_local i64 @zfs_prop_get_int(i32*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1

declare dso_local i8* @gettext(i8*) #1

declare dso_local i8* @zfs_get_name(i32*) #1

declare dso_local i32 @zfs_iter_filesystems(i32*, i32 (i32*, i8*)*, i8*) #1

declare dso_local i32 @zfs_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
